Migrated all episodes

--- a/nbplain/01_jupyter.ipynb
+++ b/nbplain/01_jupyter.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Overview:\n",
     "- **Teaching:** 10 min\n",
-    "- **Exercises:** 10 min\n",
+    "- **Exercises:** 5 min\n",
     "\n",
     "**Questions**\n",
     "- What are Jupyter Notebooks?\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -286,16 +286,53 @@
     "# block of code with python syntax highlighting\n",
     "for k in range(10):\n",
     "    print(k, 'Hello World!')\n",
-    "```"
+    "```\n",
+    "\n",
+    "[Solution]()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Solution: Markdown\n",
-    "\n",
-    "```markdown\n",
+    "## Solution+: Markdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "### A super subheading\n",
+       "\n",
+       "* list item 1\n",
+       "* list item 2\n",
+       "\n",
+       "1. numbered list item\n",
+       "1. another numbered list item\n",
+       "1. another item\n",
+       "\n",
+       "![Image from the web](https://upload.wikimedia.org/wikipedia/commons/5/52/Angolian-Python.jpg)\n",
+       "\n",
+       "```python\n",
+       "# block of code with python syntax highlighting\n",
+       "for k in range(10):\n",
+       "    print(k, 'Hello World!')\n",
+       "```\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%markdown # You can use markdown magic in a code cell to display both markdown and output, or just use a markdown cell!\n",
     "### A super subheading\n",
     "\n",
     "* list item 1\n",
@@ -318,9 +355,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    ":Solution+"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercise: Help!\n",
     "\n",
-    "Finally, use the interactive Python help to get help about the `open` function for reading and writing files."
+    "Finally, use the interactive Python help to get help about the `open` function for reading and writing files.\n",
+    "\n",
+    "[Solution]()"
    ]
   },
   {
