--- a/nbplain/05_objects.ipynb
+++ b/nbplain/05_objects.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Overview:\n",
     "- **Teaching:** 10 min\n",
-    "- **Exercises:** 10 min\n",
+    "- **Exercises:** 20 min\n",
     "\n",
     "**Questions**\n",
     "- What is an object?\n",
@@ -21,7 +21,8 @@
     "- What are the components of an object?\n",
     "\n",
     "**Objectives**\n",
-    "- Know how to define an object"
+    "- Know how to define an object\n",
+    "- Understand that objects are used to package data and functionality"
    ]
   },
   {
@@ -38,9 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "letter_to_morse = {'a':'.-', 'b':'-...', 'c':'-.-.', 'd':'-..', 'e':'.', 'f':'..-.',\n",
@@ -55,9 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def encode(message):\n",
@@ -91,24 +88,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above `encode(\"Hello\")` has worked. However, if we change the data in `letter_to_morse`, e.g. swapping `l` from `.-..` to `-.--`, then we get `['....', '.', '-.--', '-.--', '---']`, which is wrong. We can make even larger changes, which would completely break the function..."
+    "The above `encode(\"Hello\")` has worked. However, if we change the data in `letter_to_morse`, e.g. swapping `l` from `.-..` to `-.--`, then we get `['....', '.', '-.--', '-.--', '---']`, which is wrong. We can make even larger changes, which would completely break the function...\n",
+    "\n",
+    "While such changes are easy to spot in this example, they become more difficult to find in larger programs. In addition, as you share code, you will find that people using your code will do weird things to the data on which it depends, which can introduce weird bugs and problems."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While such changes are easy to spot in this example, they become more difficult to find in larger programs. In addition, as you share code, you will find that people using your code will do weird things to the data on which it depends, which can introduce weird bugs and problems.\n",
-    "\n",
     "The solution is to package a function together with the data on which it depends into a single object. This idea is the foundation of object orientated programming. To explore this, let us start with a simple example that packages the `encode` function together with the `letter_to_morse` dictionary on which it depends."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Morse:\n",
@@ -132,15 +127,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Information: Objects and Classes\n",
+    "\n",
     "Above, we have packaged the data (`letter_to_morse`) together with the `encode` function into what we call a `class`. A Class describes how data and functions are combined together. An instance of a class is called an object, which we can create by calling `Morse()`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "m = Morse()"
@@ -183,9 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class GuessGame:\n",
@@ -209,9 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "g1 = GuessGame(\"cat\")"
@@ -220,9 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "g2 = GuessGame(\"dog\")"
@@ -316,19 +305,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise\n",
+    "# Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise: 1\n",
     "\n",
-    "## Exercise 1\n",
+    "Edit the below `GuessGame` example so that it records how many unsuccessful guesses have been performed. Add a function called `nGuesses()` that returns the number of unsuccessful guesses. Once you have made the changes, check your class by creating an object of your class and using it to make some successful and unsuccessful guesses.\n",
     "\n",
-    "Edit the below `GuessGame` example so that it records how many unsuccessful guesses have been performed. Add a function called `nGuesses()` that returns the number of unsuccessful guesses. Once you have made the changes, check your class by creating an object of your class and using it to make some successful and unsuccessful guesses."
+    "[Solution]()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solution+:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class GuessGame:\n",
@@ -349,10 +350,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "g = GuessGame(\"cat\")"
@@ -360,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +368,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +405,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +442,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +479,7 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +492,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 2\n",
+    ":Solution+"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise: 2\n",
     "\n",
     "Edit the constructor of your `GuessGame` class so that the user can optionally specify a maximum number of allowable guesses. If the maximum number of guesses is not supplied, then set the default value to 5.\n",
     "\n",
@@ -501,15 +507,22 @@
     "\n",
     "Finally, edit the `guess()` function so that it will not let you make more than the maximum number of guesses (e.g. if the number of guesses exceeds the maximum number, then print out \"Sorry, you have run out of guesses.\").\n",
     "\n",
-    "Check that you code works by creating an object of GuessGame that only allows three guesses, and see what happens if you guess incorrectly more than three times."
+    "Check that you code works by creating an object of GuessGame that only allows three guesses, and see what happens if you guess incorrectly more than three times.\n",
+    "\n",
+    "[Solution]()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solution+: 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class GuessGame:\n",
@@ -536,33 +549,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "g = GuessGame(\"fish\", 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "g.maxGuesses() == 3"
    ]
   },
   {
@@ -571,15 +562,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Try again...\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "g.guess(\"cat\")"
+    "g.maxGuesses() == 3"
    ]
   },
   {
@@ -596,7 +590,7 @@
     }
    ],
    "source": [
-    "g.guess(\"dog\")"
+    "g.guess(\"cat\")"
    ]
   },
   {
@@ -613,12 +607,29 @@
     }
    ],
    "source": [
-    "g.guess(\"horse\")"
+    "g.guess(\"dog\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Try again...\n"
+     ]
+    }
+   ],
+   "source": [
+    "g.guess(\"horse\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -635,13 +646,23 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":Solution+"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
     "## Key Points:\n",
     "\n",
-    "- "
+    "- Objects are used to package data and functionality\n",
+    "- We do this by creating a class\n",
+    "- Obejcts are instances of the class\n",
+    "- The `__init__` function sets the initial state of the object"
    ]
   }
  ],
