--- a/nbplain/06_classes.ipynb
+++ b/nbplain/06_classes.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Overview:\n",
     "- **Teaching:** 10 min\n",
-    "- **Exercises:** 10 min\n",
+    "- **Exercises:** 30 min\n",
     "\n",
     "**Questions**\n",
     "- What is a class?\n",
@@ -38,9 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Exam:\n",
@@ -75,9 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Student:\n",
@@ -113,9 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "s = Student()"
@@ -124,9 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "s.addExam( \"maths\", Exam(20) )"
@@ -135,9 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "s.addExam( \"chemistry\", Exam(75) )"
@@ -158,7 +148,7 @@
     {
      "data": {
       "text/plain": [
-       "{'chemistry': 'U', 'maths': 'U'}"
+       "{'maths': 'U', 'chemistry': 'U'}"
       ]
      },
      "execution_count": 6,
@@ -180,9 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "s.addResult(\"maths\", 15)"
@@ -191,9 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "s.addResult(\"chemistry\", 62)"
@@ -207,7 +193,7 @@
     {
      "data": {
       "text/plain": [
-       "{'chemistry': 'B', 'maths': 'C'}"
+       "{'maths': 'C', 'chemistry': 'B'}"
       ]
      },
      "execution_count": 9,
@@ -229,9 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class School:\n",
@@ -268,9 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "school = School()"
@@ -279,9 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "school.addStudent(\"Charlie\")"
@@ -290,9 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "school.addStudent(\"Matt\")"
@@ -301,9 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "school.addStudent(\"James\")"
@@ -312,9 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "school.addExam( \"maths\", 20 )"
@@ -323,9 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "school.addExam( \"physics\", 50 )"
@@ -334,9 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "school.addExam( \"english literature\", 30 )"
@@ -350,9 +320,9 @@
     {
      "data": {
       "text/plain": [
-       "{'Charlie': {'english literature': 'U', 'maths': 'U', 'physics': 'U'},\n",
-       " 'James': {'english literature': 'U', 'maths': 'U', 'physics': 'U'},\n",
-       " 'Matt': {'english literature': 'U', 'maths': 'U', 'physics': 'U'}}"
+       "{'Charlie': {'maths': 'U', 'physics': 'U', 'english literature': 'U'},\n",
+       " 'Matt': {'maths': 'U', 'physics': 'U', 'english literature': 'U'},\n",
+       " 'James': {'maths': 'U', 'physics': 'U', 'english literature': 'U'}}"
       ]
      },
      "execution_count": 18,
@@ -374,9 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "englit_results = { \"Charlie\" : 10, \"Matt\" : 25, \"James\" : 3 }"
@@ -385,9 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "phys_results = { \"Matt\" : 48, \"James\" : 3 }"
@@ -396,9 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "maths_results = { \"James\" : 20, \"Matt\" : 18, \"Charlie\" : 4 }"
@@ -414,9 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def add_results(school, exam, results):\n",
@@ -427,9 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "add_results(school, \"english literature\", englit_results)"
@@ -438,9 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "add_results(school, \"physics\", phys_results)"
@@ -449,9 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "add_results(school, \"maths\", maths_results)"
@@ -465,9 +421,9 @@
     {
      "data": {
       "text/plain": [
-       "{'Charlie': {'english literature': 'F', 'maths': 'F', 'physics': 'U'},\n",
-       " 'James': {'english literature': 'F', 'maths': 'A', 'physics': 'F'},\n",
-       " 'Matt': {'english literature': 'B', 'maths': 'B', 'physics': 'A'}}"
+       "{'Charlie': {'maths': 'F', 'physics': 'U', 'english literature': 'F'},\n",
+       " 'Matt': {'maths': 'B', 'physics': 'A', 'english literature': 'B'},\n",
+       " 'James': {'maths': 'A', 'physics': 'F', 'english literature': 'F'}}"
       ]
      },
      "execution_count": 26,
@@ -483,19 +439,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise\n",
+    "# Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise: 1\n",
     "\n",
-    "## Exercise 1\n",
+    "Starting with the Morse class from the last section, modify the class to add in a `decode` function that converts Morse code back to English. Check that this class works by seeing if `m.decode( m.encode(message) ) == message.lower()`.\n",
     "\n",
-    "Here is a copy of the Morse class from the last section. Modify this class to add in a `decode` function that converts Morse code back to english. Check that this class works by seeing if `m.decode( m.encode(message) ) == message.lower()`."
+    "[Solution]()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solution+:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Morse:\n",
@@ -528,9 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "m = Morse()"
@@ -539,9 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "message = \"Hello World\""
@@ -573,23 +537,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 2\n",
+    ":Solution+"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise: 2\n",
     "\n",
-    "Below is a copy of the `School` class, together with a copy of the code needed to populate an object of that class with students and exam results. Edit the `School` class to add in the following functions:\n",
+    "Using the `School` class, together with the code needed to populate an object of that class with students and exam results,  edit the `School` class to add in the following functions:\n",
     "\n",
     "* `.resits()` : this should return the list of exams that each student should resit if they get a \"F\" or \"U\" grade.\n",
     "* `.prizeStudent()` : this should return the name of the student who scored the highest average percent across all of the exams.\n",
     "* `.reviseCourse(threshold)` : this should return the name of the exam that gets the lowest average score across all students, if the average score is below `threshold`.\n",
     "\n",
-    "Use these functions to find out which students need to resit which exams, which student should be awarded the annual school prize, and which courses should be revised as the average mark is less than 50%."
+    "Use these functions to find out which students need to resit which exams, which student should be awarded the annual school prize, and which courses should be revised as the average mark is less than 50%.\n",
+    "\n",
+    "[Solution]()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solution+:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class School:\n",
@@ -666,9 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "students = [\"Charlie\", \"James\", \"Matt\"]"
@@ -677,9 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "exams = { \"maths\" : 20, \"physics\" : 50, \"english literature\" : 30 }"
@@ -688,9 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "results = { \"maths\" : { \"James\" : 20, \"Matt\" : 18, \"Charlie\" : 4 }, \n",
@@ -701,9 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "school = School()"
@@ -712,9 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for student in students:\n",
@@ -724,9 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for exam in exams.keys():\n",
@@ -736,9 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for exam in results:\n",
@@ -753,9 +717,9 @@
     {
      "data": {
       "text/plain": [
-       "{'Charlie': {'english literature': 'F', 'maths': 'F', 'physics': 'U'},\n",
-       " 'James': {'english literature': 'F', 'maths': 'A', 'physics': 'F'},\n",
-       " 'Matt': {'english literature': 'B', 'maths': 'B', 'physics': 'A'}}"
+       "{'Charlie': {'maths': 'F', 'physics': 'U', 'english literature': 'F'},\n",
+       " 'James': {'maths': 'A', 'physics': 'F', 'english literature': 'F'},\n",
+       " 'Matt': {'maths': 'B', 'physics': 'A', 'english literature': 'B'}}"
       ]
      },
      "execution_count": 39,
@@ -775,7 +739,7 @@
     {
      "data": {
       "text/plain": [
-       "{'Charlie': ['physics', 'maths', 'english literature'],\n",
+       "{'Charlie': ['maths', 'physics', 'english literature'],\n",
        " 'James': ['physics', 'english literature']}"
       ]
      },
@@ -816,7 +780,7 @@
     {
      "data": {
       "text/plain": [
-       "{'english literature': 42.22222222222222, 'physics': 34.0}"
+       "{'physics': 34.0, 'english literature': 42.22222222222222}"
       ]
      },
      "execution_count": 42,
@@ -830,13 +794,22 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":Solution+"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
     "## Key Points:\n",
     "\n",
-    "- "
+    "- Classes combine data and functions into useful core functioanlity\n",
+    "- Classes can contain instances other other classes\n",
+    "- Building modular code in this way helps to produce **readable, maintainable and testable** code."
    ]
   }
  ],
